src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Allmakes</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Freightliner</fullName>
                </value>
                <value>
                    <fullName>Fuso</fullName>
                </value>
                <value>
                    <fullName>Bus &amp; Coach</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>MBFS Cars</fullName>
                </value>
                <value>
                    <fullName>MBFS Trucks</fullName>
                </value>
                <value>
                    <fullName>MB Trucks</fullName>
                </value>
                <value>
                    <fullName>Vans</fullName>
                </value>
                <value>
                    <fullName>SelecTrucks</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>Special Vehicles</fullName>
                </value>
                <value>
                    <fullName>Unimog</fullName>
                </value>
                <value>
                    <fullName>Western Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUP_Number__c</fullName>
        <description>Duplication number to identify the suspected duplication group to be filled by EP</description>
        <label>DUP Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Aftersales_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permission set: aftermarket annual plan, aftermarket activities information Center reports</description>
        <label>Dealer Aftersales Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_CRM_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Permission set: Add an active member/membership status/update activity generates sales leads</inlineHelpText>
        <label>Dealer CRM Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_Gate_Keeper__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Permission set:</inlineHelpText>
        <label>Dealer Complaint Gate Keeper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Permission set:</inlineHelpText>
        <label>Dealer Complaint Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Permission set:</inlineHelpText>
        <label>Dealer Complaint User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Lead_Gate_Keeper__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Permission set: clues</inlineHelpText>
        <label>Dealer Lead Gate Keeper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Marketing_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Permission set: annual sales plans, sales and marketing activities (joint marketing campaigns and organise), aftermarket annual plan, aftermarket activities, best campaign, Toolbox, information center, distributor points, the report</inlineHelpText>
        <label>Dealer Marketing Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Presales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Presales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_S_M_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Permission set: annual sales plans, sales and marketing activities (joint marketing campaigns and organise), best campaign, Toolbox, information center, distributor points, the report</inlineHelpText>
        <label>Dealer S&amp;M Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Recipient_Type__c</fullName>
        <label>EOC Recipient Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>150 Days Primary</fullName>
                </value>
                <value>
                    <fullName>150 Days CC</fullName>
                </value>
                <value>
                    <fullName>60 Days Primary</fullName>
                </value>
                <value>
                    <fullName>60 Days CC</fullName>
                </value>
                <value>
                    <fullName>45 Days Primary</fullName>
                </value>
                <value>
                    <fullName>45 Days CC</fullName>
                </value>
                <value>
                    <fullName>20 Days Primary</fullName>
                </value>
                <value>
                    <fullName>20 Days CC</fullName>
                </value>
                <value>
                    <fullName>15 Days Primary</fullName>
                </value>
                <value>
                    <fullName>15 Days CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <label>GEMS ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Lead_Type__c</fullName>
        <label>Finance Lead Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key 2 Key</fullName>
                </value>
                <value>
                    <fullName>Early Payout</fullName>
                </value>
                <value>
                    <fullName>Agility</fullName>
                </value>
                <value>
                    <fullName>Vehicle Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bodywork - Paint Specialist</fullName>
                </value>
                <value>
                    <fullName>Bodywork - Panel Expert</fullName>
                </value>
                <value>
                    <fullName>Bodywork - Panel Specialist</fullName>
                </value>
                <value>
                    <fullName>Management – Accounts Manager</fullName>
                </value>
                <value>
                    <fullName>Management – Chairman</fullName>
                </value>
                <value>
                    <fullName>Management – Corporate Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Management - Dealer Principal</fullName>
                </value>
                <value>
                    <fullName>Management – Director</fullName>
                </value>
                <value>
                    <fullName>Management - F&amp;I Business Manager</fullName>
                </value>
                <value>
                    <fullName>Management - Fixed Operations Manager</fullName>
                </value>
                <value>
                    <fullName>Management - General Manager</fullName>
                </value>
                <value>
                    <fullName>Management – General Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Management - Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Management - Parts Manager</fullName>
                </value>
                <value>
                    <fullName>Management - Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Management - Service Manager</fullName>
                </value>
                <value>
                    <fullName>Other Staff - Customer Facing</fullName>
                </value>
                <value>
                    <fullName>Other Staff - Non Customer Facing</fullName>
                </value>
                <value>
                    <fullName>Parts/Accessories Salesperson</fullName>
                </value>
                <value>
                    <fullName>Parts – Apprentice</fullName>
                </value>
                <value>
                    <fullName>Parts – Interpreter</fullName>
                </value>
                <value>
                    <fullName>Receptionist</fullName>
                </value>
                <value>
                    <fullName>Sales - Cadet</fullName>
                </value>
                <value>
                    <fullName>Sales - Consultant</fullName>
                </value>
                <value>
                    <fullName>Sales - Consultant (AMG Specialist)</fullName>
                </value>
                <value>
                    <fullName>Sales - Consultant (Corporate/Fleet)</fullName>
                </value>
                <value>
                    <fullName>Service - Advisor</fullName>
                </value>
                <value>
                    <fullName>Service - Workshop Controller/Foreman</fullName>
                </value>
                <value>
                    <fullName>Stock Controller</fullName>
                </value>
                <value>
                    <fullName>System Technician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Escalation_Recipient_Type__c</fullName>
        <label>Lead Escalation Recipient Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate Notice</fullName>
                </value>
                <value>
                    <fullName>24H Untouched Notice</fullName>
                </value>
                <value>
                    <fullName>72H Untouched Notice</fullName>
                </value>
                <value>
                    <fullName>CC Lead Escalation Recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
			IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
			IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;, 
			IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,
			IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_English__c</fullName>
        <label>Name (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Settings__c</fullName>
        <inlineHelpText>Clues--the customer, vehicle, vehicle
Case-- Customer, vehicle, vehicle
Adds an active member/membership status/update activity generated sales leads--the customer, vehicle, vehicle, clues, and joint marketing activities and dealer campaigns</inlineHelpText>
        <label>Permission Set Settings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leads_Management</fullName>
                </value>
                <value>
                    <fullName>Complaint_Management</fullName>
                </value>
                <value>
                    <fullName>S_M_Yearly_TA</fullName>
                </value>
                <value>
                    <fullName>S_M_Retail_Campaign</fullName>
                </value>
                <value>
                    <fullName>AS_Yearly_TA</fullName>
                </value>
                <value>
                    <fullName>AS_Retail_Campaign</fullName>
                </value>
                <value>
                    <fullName>Segmentation_execution_Retail_Lead</fullName>
                </value>
                <value>
                    <fullName>Best_Practise</fullName>
                </value>
                <value>
                    <fullName>Tool_Kit</fullName>
                </value>
                <value>
                    <fullName>Info_Center</fullName>
                </value>
                <value>
                    <fullName>Dealer_Score</fullName>
                </value>
                <value>
                    <fullName>Dealer_Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS/MMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SegmentationFilters__c</fullName>
        <description>The filters on Retail Campaign Segmentation page.</description>
        <label>Segmentation Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shareholder_Percentage__c</fullName>
        <label>Shareholder Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_BusinessUnit__c</fullName>
        <label>Offered Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Pre-Owned</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Auto Body Repairer</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The contact type for Customer(Company)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Warrantor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/27/2013 12:00 AM</value>
        </filters>
        <label>Birthdays This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>DealerStaff</fullName>
        <active>true</active>
        <label>DealerStaff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Directors_Shareholders</fullName>
        <active>true</active>
        <label>Directors &amp; Shareholders</label>
    </recordTypes>
    <recordTypes>
        <fullName>MBAuP_Contacts</fullName>
        <active>true</active>
        <label>MBAuP &amp; MBFS Contacts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RestrictCheckComplaintAndLeadGateKeeper</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Dealer_Complaint_User__c,  Dealer_Lead_Gate_Keeper__c  )</errorConditionFormula>
        <errorMessage>You must check only one for &quot;Dealer Lead Gate Keeper&quot; and &quot;Dealer Complaint User&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictCheckComplaintGaAndComplaintUser</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Dealer_Complaint_User__c ,  Dealer_Complaint_Gate_Keeper__c )</errorConditionFormula>
        <errorMessage>You must check only one for &quot;Dealer Complaint Gate Keeper&quot; and &quot;Dealer Complaint User&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictCheckPresalesAndComplaintUser</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Dealer_Presales__c  ,   Dealer_Complaint_Manager__c )</errorConditionFormula>
        <errorMessage>You must check only one for &quot;Dealer Presales&quot; and &quot;Dealer Complaint Manager&quot;.</errorMessage>
    </validationRules>
</CustomObject>